Update and rename 2. creating block using Rust.md to 2. creating block and its chain byusing Rust.md

--- a/2. creating block and its chain byusing Rust.md
+++ b/2. creating block and its chain byusing Rust.md
@@ -111,4 +111,164 @@ previous_hash:    [116, 104, 105, 115, 32, 105, 115, 32, 111, 117, 114, 32, 102,
 transactions:     []
 the first block is : Block { nonce: 0, previous_hash: [116, 104, 105, 115, 32, 105, 115, 32, 111, 117, 114, 32, 102, 105, 114, 115, 116, 32, 98, 108, 111, 99, 107, 33], time_stamp: 1723385266432718000, transactions: [] }
 ```
-Such mechanism is called trait in Rust and is very powerful but not easy to understand, we will goto it in detail in later sections
+Such mechanism is called trait in Rust and is very powerful but not easy to understand, we will goto it in detail in later sections.
+
+Now we have blocks, then we need to use a chain to link them together and make up the blockchain, let's define the chain first:
+```rs
+//ask the compiler to print the struct
+#[derive(Debug)]
+struct BlockChain {
+    /*
+    any transaction before going to the chain will wait on the transaction pool
+    until they are minted, we will goto the detail at later
+    */
+    transaction_pool: Vec<Vec<u8>>,
+    chain: Vec<Block>,
+}
+
+impl BlockChain {
+    fn new() -> Self {
+        /*
+        we need to call methods that will change its state, and we need it
+        to be mutable
+        */
+        let mut bc = BlockChain {
+            transaction_pool: Vec::<Vec<u8>>::new(),
+            /*
+            Type in Vec is complex one, then need ::
+            */
+            chain: Vec::<Block>::new(),
+        };
+
+        bc.create_block(0, "Hash for the very first block".to_string().into_bytes());
+        bc //no semicolon for returning it
+    }
+    //we need to write to fields of the given struct
+    fn create_block(&mut self, nonce: i32, previous_hash: Vec<u8>) {
+        let b = Block::new(nonce, previous_hash);
+        //the chain own the block
+        self.chain.push(b);
+    }
+
+    fn print(&self) {
+        /*
+        using iterator to loop over vector, it is complcate and powerful,
+        we will go to it later
+        */
+        for (i, x) in self.chain.iter().enumerate() {
+            println!("Chain {}", i);
+            x.print();
+        }
+    }
+}
+
+fn main() {
+    //as_bytes convert string to bytes array
+    // let b = Block::new(0, "this is our first block!".to_string().into_bytes());
+    // b.print();
+
+    // println!("the first block is : {:?}", b);
+
+    let block_chain = BlockChain::new();
+    println!("block chain: {:?}", block_chain);
+
+    block_chain.print();
+}
+
+```
+
+Running the code aboved we will get the following:
+```rs
+block chain: BlockChain { transaction_pool: [], chain: [Block { nonce: 0, previous_hash: [70, 105, 114, 115, 116, 32, 98, 108, 111, 99, 107, 32, 111, 102, 32, 116, 104, 101, 32, 99, 104, 97, 105, 110], time_stamp: 1723472325991372000, transactions: [] }] }
+Chain 0
+timestamp: 17eb00f2faee94e0
+nonce:      0,
+previous_hash:    [70, 105, 114, 115, 116, 32, 98, 108, 111, 99, 107, 32, 111, 102, 32, 116, 104, 101, 32, 99, 104, 97, 105, 110]
+transactions:     []
+```
+
+Let's create more blocks in the chain as following:
+```rs
+block chain: BlockChain { transaction_pool: [], chain: [Block { nonce: 0, previous_hash: [72, 97, 115, 104, 32, 102, 111, 114, 32, 116, 104, 101, 32, 118, 101, 114, 121, 32, 102, 105, 114, 115, 116, 32, 98, 108, 111, 99, 107], time_stamp: 1723472710820715000, transactions: [] }] }
+Chain 0
+timestamp: 17eb014c948c59f8
+nonce:      0,
+previous_hash:    [72, 97, 115, 104, 32, 102, 111, 114, 32, 116, 104, 101, 32, 118, 101, 114, 121, 32, 102, 105, 114, 115, 116, 32, 98, 108, 111, 99, 107]
+transactions:     []
+```
+
+Let's create more blocks for the chain as following:
+```rs
+fn main() {
+    //as_bytes convert string to bytes array
+    // let b = Block::new(0, "this is our first block!".to_string().into_bytes());
+    // b.print();
+
+    // println!("the first block is : {:?}", b);
+    /*
+    need mutable since we will change its state by calling create_block
+    */
+
+    let mut block_chain = BlockChain::new();
+    println!("block chain: {:?}", block_chain);
+    block_chain.print();
+
+    block_chain.create_block(1, "hash 1".to_string().into_bytes());
+    block_chain.print();
+    block_chain.create_block(2, "hash 2".to_string().into_bytes());
+    block_chain.print();
+}
+```
+Then we will get the following output by aboved code:
+```rs
+Chain 0
+timestamp: 17eb0186d8b3acf0
+nonce:      0,
+previous_hash:    [72, 97, 115, 104, 32, 102, 111, 114, 32, 116, 104, 101, 32, 118, 101, 114, 121, 32, 102, 105, 114, 115, 116, 32, 98, 108, 111, 99, 107]
+transactions:     []
+Chain 1
+timestamp: 17eb0186d8b4dda0
+nonce:      1,
+previous_hash:    [104, 97, 115, 104, 32, 49]
+transactions:     []
+Chain 2
+timestamp: 17eb0186d8b54330
+nonce:      2,
+previous_hash:    [104, 97, 115, 104, 32, 50]
+transactions:     []
+```
+We can format the aboved output and make the more clear to check by using some sperators as following:
+```rs
+ fn print(&self) {
+        /*
+        using iterator to loop over vector, it is complcate and powerful,
+        we will go to it later
+        */
+        for (i, x) in self.chain.iter().enumerate() {
+            println!("{} Chain {}  {}", "=".repeat(25), i, "=".repeat(25));
+            x.print();
+        }
+        println!("{}", "*".repeat(25));
+    }
+```
+Then we will have a nice format as following:
+```rs
+*************************
+========================= Chain 0  =========================
+timestamp: 17eb0223d2871a18
+nonce:      0,
+previous_hash:    [72, 97, 115, 104, 32, 102, 111, 114, 32, 116, 104, 101, 32, 118, 101, 114, 121, 32, 102, 105, 114, 115, 116, 32, 98, 108, 111, 99, 107]
+transactions:     []
+========================= Chain 1  =========================
+timestamp: 17eb0223d2889118
+nonce:      1,
+previous_hash:    [104, 97, 115, 104, 32, 49]
+transactions:     []
+========================= Chain 2  =========================
+timestamp: 17eb0223d28a17b8
+nonce:      2,
+previous_hash:    [104, 97, 115, 104, 32, 50]
+transactions:     []
+*************************
+```
+
