Update and rename 2. creating block and its chain byusing Rust.md to 2. creating block and its chain by using Rust.md

--- a/2. creating block and its chain by using Rust.md
+++ b/2. creating block and its chain by using Rust.md
@@ -272,3 +272,137 @@ transactions:     []
 *************************
 ```
 
+It is a kind of code smell that we put all code related to blockchain in the main.rs, think about if the blockchain system has millions of lines of code, then the main.rs will too
+large to be mainable, therefore we need to seperate all code related to blockchain into its own module. There are two ways to create module for a project, the first is create another
+file with the name of your module and put all code inside it.
+
+For example we want to create a module named blockchain to have all code that related to blockchain implementation, then we can create a new file with name blockchain.rs and move the
+code of blockchain in main.rs to that file, and remember to have the "pub" keyword if you want any item: structs or functions to be visible by outside world:
+
+```rs
+use std::time::SystemTime;
+/*
+remember to use the pub keyword to make things here to be visible by outside
+*/
+//let compile do some job such as printing for us
+#[derive(Debug)]
+pub struct Block {
+    nonce: i32,
+    previous_hash: Vec<u8>,
+    time_stamp: u128,
+    transactions: Vec<Vec<u8>>,
+}
+
+impl Block {
+    //static method, it dosen't need to access to the struct
+    //Self is alias name of the given struct, notice it should Capitalize
+    pub fn new(nonce: i32, previous_hash: Vec<u8>) -> Self {
+        let duration_since_epoch = SystemTime::now()
+            .duration_since(SystemTime::UNIX_EPOCH)
+            .unwrap();
+        //notice the parameter of previous_hash will lost ownership
+        Block {
+            nonce: nonce,
+            previous_hash: previous_hash,
+            time_stamp: duration_since_epoch.as_nanos(),
+            /*
+            If the type for vector is complex one such as another kind of
+            vector, then we need to have :: between Vec and its type <Vec<u8>>
+            */
+            transactions: Vec::<Vec<u8>>::new(),
+        } //don't add semicolon here, since we want to return the object
+    }
+
+    //struct method, it will receive the reference of the struct instance
+    pub fn print(&self) {
+        /*
+        If we won't change any fields in the strint, we use inmutable reference,
+        otherwise we need mutable reference &mut self
+        */
+        //format hex value
+        println!("timestamp: {:x}", self.time_stamp);
+        //format integer value
+        println!("nonce:      {},", self.nonce);
+        //let compiler decide how to print vector
+        //actually it is called trait, go to it later
+        println!("previous_hash:    {:?}", self.previous_hash);
+        println!("transactions:     {:?}", self.transactions);
+    }
+}
+
+//ask the compiler to print the struct
+#[derive(Debug)]
+pub struct BlockChain {
+    /*
+    any transaction before going to the chain will wait on the transaction pool
+    until they are minted, we will goto the detail at later
+    */
+    transaction_pool: Vec<Vec<u8>>,
+    chain: Vec<Block>,
+}
+
+impl BlockChain {
+    pub fn new() -> Self {
+        /*
+        we need to call methods that will change its state, and we need it
+        to be mutable
+        */
+        let mut bc = BlockChain {
+            transaction_pool: Vec::<Vec<u8>>::new(),
+            /*
+            Type in Vec is complex one, then need ::
+            */
+            chain: Vec::<Block>::new(),
+        };
+
+        bc.create_block(0, "Hash for the very first block".to_string().into_bytes());
+        bc //no semicolon for returning it
+    }
+    //we need to write to fields of the given struct
+    pub fn create_block(&mut self, nonce: i32, previous_hash: Vec<u8>) {
+        let b = Block::new(nonce, previous_hash);
+        //the chain own the block
+        self.chain.push(b);
+    }
+
+    pub fn print(&self) {
+        /*
+        using iterator to loop over vector, it is complcate and powerful,
+        we will go to it later
+        */
+        for (i, x) in self.chain.iter().enumerate() {
+            println!("{} Chain {}  {}", "=".repeat(25), i, "=".repeat(25));
+            x.print();
+        }
+        println!("{}", "*".repeat(25));
+    }
+}
+
+```
+Then in main.rs, in order to reference to struct or functions in the blockchain.rs, we need to use "pub mod blockchain" to tell the compiler there is a module along side with the
+current file and using "use blockchain::BlockChain;" to bring the BlockChain struct in the module for usage in the main.rs:
+```rs
+pub mod blockchain;
+use blockchain::BlockChain;
+
+fn main() {
+    //as_bytes convert string to bytes array
+    // let b = Block::new(0, "this is our first block!".to_string().into_bytes());
+    // b.print();
+
+    // println!("the first block is : {:?}", b);
+    /*
+    need mutable since we will change its state by calling create_block
+    */
+
+    let mut block_chain = BlockChain::new();
+    println!("block chain: {:?}", block_chain);
+    block_chain.print();
+
+    block_chain.create_block(1, "hash 1".to_string().into_bytes());
+    block_chain.print();
+    block_chain.create_block(2, "hash 2".to_string().into_bytes());
+    block_chain.print();
+}
+
+```
