Update 2. creating block and its chain by using Rust.md

--- a/2. creating block and its chain by using Rust.md
+++ b/2. creating block and its chain by using Rust.md
@@ -406,3 +406,6 @@ fn main() {
 }
 
 ```
+
+The second way to create module is by its own directory, let's create a new directory name blockchain in the same dir of main.rs, then we create a file named mod.rs, and move all 
+code in blockchain.rs into mod.rs, then remove blockchain.rs, Rust can only allow one of the ways to create seperate modulde.
