Update 5.operator overloading and proof of work.md

--- a/5.operator overloading and proof of work.md
+++ b/5.operator overloading and proof of work.md
@@ -87,3 +87,24 @@ pub fn create_block(&mut self, nonce: i32, previous_hash: Vec<u8>) {
         }
     }
 ```
+After adding aboved code, we can test the code in main.rs as following:
+
+```rs
+fn main() {
+    let mut block_chain = BlockChain::new();
+    block_chain.print();
+}
+```
+
+Then run the code and we get the following result:
+```rs
+compute time: 103.300221ms
+proof for the current block is :"0004794c524ef2583cb02e77408b7c889823afc9e678aaa3b327c70ce05b36ec"
+========================= Chain 0 =========================
+timestamp: 17f03fe0dad70200
+nonce: 2689
+previous_hash: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+transactions: []
+*************************
+```
+you can try to increase the difficulty level and found time used to compute the proof of work will get longer and longer.
