Update 5.operator overloading and proof of work.md

--- a/5.operator overloading and proof of work.md
+++ b/5.operator overloading and proof of work.md
@@ -108,3 +108,87 @@ transactions: []
 *************************
 ```
 you can try to increase the difficulty level and found time used to compute the proof of work will get longer and longer.
+
+Let's have another look for operator overloading. What about we want to compare two block objects by using "==", then we need to overload this compound operator as 
+following:
+
+```js
+trait PartialEq<Rhs=Self> where Rhs :? Sized {
+    fn eq(&self, other: &Rhs) -> bool;
+    fn eq(&self, other: &Rhs) -> bool {
+        !self.eq(other)
+    }
+}
+```
+There are many things need to be noticed, The first is ?Sized, Sized is an important concept for Rust, All concret type like Block, BlockChain are Sized, because the 
+compiler can know how many memory is used by the given objects. And all trait like Serialization is not sized, because the compiler would not know the memory size for
+given object at the compile time, we will goto it in later sections.
+
+The second thing need to be noticed is, eventhought there are two methods in the trait, we only need to implement the method of eq. 
+
+The third one we need to be noticed is, the trait for "==" is called Partial Equal, why it is partial? That's because for given object x, "x == x" may not be true, for 
+example, NaN is a object of "not a number", and it is not equal to any value even to itself.
+
+If we want to compare two Block object are equal or not, we can implement this trait on Block, and in the eq method, we can compare their hash value for equalization:
+in mod.rs, we have following code:
+```rs
+use std::cmp::PartialEq;
+impl PartialEq for Block {
+    fn eq(&self, other: &Block) -> bool {
+        let self_hash = self.hash();
+        let other_hash = other.hash();
+        self_hash == other_hash
+    }
+}
+```
+Then we in main.rs:
+```rs
+fn main() {
+    let mut block1 = Block::new(0, "previous hash".as_bytes().to_vec());
+    let mut block2 = Block::new(0, "previous hash".as_bytes().to_vec());
+    println!("block1 == block2 : {}", block1 == block2);
+}
+```
+Then we have following result:
+```rs
+block1 == block2 : false
+```
+Since the time stamp of two blocks are different, therefore they have two different hash value. Another interesting operator is "[]" which is the index operator, Since
+we put blocks in a vector, then for BlockChain object block_chain, we want to get given block in given index as block_chain[1], then we can overload the following trait:
+
+```rs
+trait Index<idx> {
+    type Output: ?Sized;
+    fn index(&self, index: Idx) -> &Self::Output;
+}
+```
+Let's see how we can implement this trait by code:
+
+```rs
+impl Index<usize> for BlockChain {
+    type Output = Block;
+    fn index(&self, idx: usize) -> &Self::Output {
+        let res = self.chain.get(idx);
+        match res {
+            Some(block) => {
+                return block;
+            }
+            None => {
+                panic!("index out of range for the chain");
+            }
+        }
+    }
+}
+```
+
+Then in main.rs we have:
+```rs
+fn main() {
+    let block = block_chain[0];
+    println!("The first block of the chain is: {:?}", block);
+}
+```
+Then running the code we get the following result:
+```rs
+The first block of the chain is: Block { nonce: 19446, previous_hash: [227, 213, 239, 160, 56, 197, 155, 104, 95, 24, 112, 186, 143, 78, 130, 186, 194, 212, 64, 40, 220, 244, 241, 25, 0, 192, 14, 110, 141, 147, 98, 110], time_stamp: 1725009702018728000, transactions: [] }
+```
