Update 5.operator overloading and proof of work.md

--- a/5.operator overloading and proof of work.md
+++ b/5.operator overloading and proof of work.md
@@ -192,3 +192,6 @@ Then running the code we get the following result:
 ```rs
 The first block of the chain is: Block { nonce: 19446, previous_hash: [227, 213, 239, 160, 56, 197, 155, 104, 95, 24, 112, 186, 143, 78, 130, 186, 194, 212, 64, 40, 220, 244, 241, 25, 0, 192, 14, 110, 141, 147, 98, 110], time_stamp: 1725009702018728000, transactions: [] }
 ```
+
+We will wrap up this section by talking about mining. The major task of mining is doing the proof of work, and when the jos is done, the chain will give a coin as reward
+for the miner who first complete the job.
