Update 5.operator overloading and proof of work.md

--- a/5.operator overloading and proof of work.md
+++ b/5.operator overloading and proof of work.md
@@ -194,4 +194,227 @@ The first block of the chain is: Block { nonce: 19446, previous_hash: [227, 213,
 ```
 
 We will wrap up this section by talking about mining. The major task of mining is doing the proof of work, and when the jos is done, the chain will give a coin as reward
-for the miner who first complete the job.
+for the miner who first complete the job. Then we will change the code like following, for mod.rs:
+```rs
+pub struct BlockChain {
+    /*
+    any transaction before going to the chain will wait on the transaction pool
+    until they are minted, we will goto the detail at later
+    */
+    transaction_pool: Vec<Vec<u8>>,
+    chain: Vec<Block>,
+    //the address for the miner
+    blockchain_address: String,
+}
+
+impl BlockChain {
+    const DIFFICULTY: usize = 3;
+    const MINING_SENDER: &str = "THE BLOCKCHAIN";
+    const MINING_REWOARD: u64 = 1;
+    pub fn new(address: String) -> Self {
+        /*
+        we need to call methods that will change its state, and we need it
+        to be mutable
+        */
+        let mut bc = BlockChain {
+            transaction_pool: Vec::<Vec<u8>>::new(),
+            /*
+            Type in Vec is complex one, then need ::
+            */
+            chain: Vec::<Block>::new(),
+            blockchain_address: address,
+        };
+
+        let b = Block::new(0, vec![0 as u8; 32]);
+        //Mine a new block after the genisis block
+        bc.chain.push(b);
+        bc.mining();
+
+        bc //no semicolon for returning it
+    }
+    ...
+     pub fn print(&self) {
+        /*
+        using iterator to loop over vector, it is complcate and powerful,
+        we will go to it later
+        */
+        for (i, x) in self.chain.iter().enumerate() {
+            println!("{} Chain {}  {}", "=".repeat(25), i, "=".repeat(25));
+            x.print();
+        }
+        println!("{}", "*".repeat(25));
+    }
+    ....
+    pub fn mining(&mut self) -> bool {
+        /*
+        if a block is mined, a transaction will created and the chain will send
+        a coin to the miner
+        */
+        let tx = Transaction::new(
+            BlockChain::MINING_SENDER.clone().into(),
+            self.blockchain_address.clone().into(),
+            BlockChain::MINING_REWOARD,
+        );
+        self.add_transaction(&tx);
+
+        self.create_block(0, self.last_block().hash());
+
+        true
+    }
+
+impl Block {
+    ....
+ pub fn print(&self) {
+        /*
+        If we won't change any fields in the strint, we use inmutable reference,
+        otherwise we need mutable reference &mut self
+        */
+        //format hex value
+        println!("timestamp: {:x}", self.time_stamp);
+        //format integer value
+        println!("nonce:      {},", self.nonce);
+        //let compiler decide how to print vector
+        //actually it is called trait, go to it later
+        println!("previous_hash:    {:?}", self.previous_hash);
+        for (idx, tx) in self.transactions.iter().enumerate() {
+            let transaction = Transaction::deserialization(tx.to_vec());
+            println!("the {}'th transaction is: {}", idx, transaction);
+        }
+    }
+   ...
+}
+```
+In the aboved code, we add a mining function, it creates a transaction which is used to send 1 coin from the blockchain to the miner address, the miner is who running
+the current blockchain, if it successfully complete the proof of work, then it will receive a coin reward from the chain, and this reward is recorded in a transaction.
+
+And in the block implementation, we change the print function a little bit, it will deserialize the binary data into transaction object and print it out. Since the 
+transaction object implement the Display trait, it can show more infos in the println! macro, and finally in transaction.rs, we make some miner changes:
+```rs
+impl fmt::Display for Transaction {
+    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
+        write!(
+            f,
+            "{}\nsender address: {:?}\nreceipent address: {:?}\nvalue:{}\n {}",
+            "-".repeat(40),
+            str::from_utf8(&self.sender_address),
+            str::from_utf8(&self.recipient_address),
+            self.value,
+            "-".repeat(40)
+        )
+    }
+}
+```
+Then in main.rs, we run aboved code as following:
+```rs
+fn main() {
+    let my_blockchain_addr = "my blockchain address";
+    let mut block_chain = BlockChain::new(my_blockchain_addr.into());
+    block_chain.print();
+
+    block_chain.add_transaction(&Transaction::new("A".into(), "B".into(), 1));
+    block_chain.mining();
+    block_chain.print();
+
+    block_chain.add_transaction(&Transaction::new("C".into(), "D".into(), 1));
+    block_chain.add_transaction(&Transaction::new("X".into(), "Y".into(), 1));
+    block_chain.mining();
+    block_chain.print();
+}
+```
+Run aboved code we get the following result:
+```rs
+computing time: 98.313489ms,proof hash for current block is: "0002d7af8f0106a9b8d3382e3a9a19438ee02ed88be38eff81a896cf7359fa52"
+========================= Chain 0  =========================
+timestamp: 17f1028ba90de748
+nonce:      0,
+previous_hash:    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+========================= Chain 1  =========================
+timestamp: 17f1028ba90f6230
+nonce:      3835,
+previous_hash:    [34, 136, 82, 49, 136, 52, 147, 116, 106, 62, 217, 15, 48, 3, 15, 154, 201, 237, 205, 186, 141, 109, 44, 248, 12, 100, 106, 247, 104, 102, 231, 2]
+the 0'th transaction is: ----------------------------------------
+sender address: Ok("THE BLOCKCHAIN")
+receipent address: Ok("my blockchain address")
+value:1
+ ----------------------------------------
+*************************
+computing time: 99.583783ms,proof hash for current block is: "0008a40ac704a84e9722928865796b410e0c5e2895ce64b6b89d41930758e284"
+========================= Chain 0  =========================
+timestamp: 17f1028ba90de748
+nonce:      0,
+previous_hash:    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+========================= Chain 1  =========================
+timestamp: 17f1028ba90f6230
+nonce:      3835,
+previous_hash:    [34, 136, 82, 49, 136, 52, 147, 116, 106, 62, 217, 15, 48, 3, 15, 154, 201, 237, 205, 186, 141, 109, 44, 248, 12, 100, 106, 247, 104, 102, 231, 2]
+the 0'th transaction is: ----------------------------------------
+sender address: Ok("THE BLOCKCHAIN")
+receipent address: Ok("my blockchain address")
+value:1
+ ----------------------------------------
+========================= Chain 2  =========================
+timestamp: 17f1028baefb0de8
+nonce:      2147,
+previous_hash:    [0, 2, 215, 175, 143, 1, 6, 169, 184, 211, 56, 46, 58, 154, 25, 67, 142, 224, 46, 216, 139, 227, 142, 255, 129, 168, 150, 207, 115, 89, 250, 82]
+the 0'th transaction is: ----------------------------------------
+sender address: Ok("A")
+receipent address: Ok("B")
+value:1
+ ----------------------------------------
+the 1'th transaction is: ----------------------------------------
+sender address: Ok("THE BLOCKCHAIN")
+receipent address: Ok("my blockchain address")
+value:1
+ ----------------------------------------
+*************************
+computing time: 55.212966ms,proof hash for current block is: "0003201ee27f01d577d09b5d3949151e202513416d39c60288000a2dafface47"
+========================= Chain 0  =========================
+timestamp: 17f1028ba90de748
+nonce:      0,
+previous_hash:    [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+========================= Chain 1  =========================
+timestamp: 17f1028ba90f6230
+nonce:      3835,
+previous_hash:    [34, 136, 82, 49, 136, 52, 147, 116, 106, 62, 217, 15, 48, 3, 15, 154, 201, 237, 205, 186, 141, 109, 44, 248, 12, 100, 106, 247, 104, 102, 231, 2]
+the 0'th transaction is: ----------------------------------------
+sender address: Ok("THE BLOCKCHAIN")
+receipent address: Ok("my blockchain address")
+value:1
+ ----------------------------------------
+========================= Chain 2  =========================
+timestamp: 17f1028baefb0de8
+nonce:      2147,
+previous_hash:    [0, 2, 215, 175, 143, 1, 6, 169, 184, 211, 56, 46, 58, 154, 25, 67, 142, 224, 46, 216, 139, 227, 142, 255, 129, 168, 150, 207, 115, 89, 250, 82]
+the 0'th transaction is: ----------------------------------------
+sender address: Ok("A")
+receipent address: Ok("B")
+value:1
+ ----------------------------------------
+the 1'th transaction is: ----------------------------------------
+sender address: Ok("THE BLOCKCHAIN")
+receipent address: Ok("my blockchain address")
+value:1
+ ----------------------------------------
+========================= Chain 3  =========================
+timestamp: 17f1028bb4f2d730
+nonce:      924,
+previous_hash:    [0, 8, 164, 10, 199, 4, 168, 78, 151, 34, 146, 136, 101, 121, 107, 65, 14, 12, 94, 40, 149, 206, 100, 182, 184, 157, 65, 147, 7, 88, 226, 132]
+the 0'th transaction is: ----------------------------------------
+sender address: Ok("C")
+receipent address: Ok("D")
+value:1
+ ----------------------------------------
+the 1'th transaction is: ----------------------------------------
+sender address: Ok("X")
+receipent address: Ok("Y")
+value:1
+ ----------------------------------------
+the 2'th transaction is: ----------------------------------------
+sender address: Ok("THE BLOCKCHAIN")
+receipent address: Ok("my blockchain address")
+value:1
+ ----------------------------------------
+*************************
+```
+As you can see we print out more detail info, especially we print out sender and receiver for a transaction, when we complete mining a block, a transaction is created,
+with sender as the blockchain and receiver is the miner.
