Update 5.operator overloading and proof of work.md

--- a/5.operator overloading and proof of work.md
+++ b/5.operator overloading and proof of work.md
@@ -86,6 +86,8 @@ pub fn create_block(&mut self, nonce: i32, previous_hash: Vec<u8>) {
             *block += 1;
         }
     }
+
+
 ```
 After adding aboved code, we can test the code in main.rs as following:
 
@@ -262,6 +264,36 @@ impl BlockChain {
         true
     }
 
+ pub fn calculate_total_amount(&self, address: String) -> i64 {
+        let mut total_amount: i64 = 0;
+        for i in 0..self.chain.len() {
+            //we overload index operator before
+            let block = &self[i];
+            for t in block.transactions.iter() {
+                let tx = Transaction::deserialization(t.clone());
+                let value = tx.value;
+               /*
+                into is a trait used for converting one type into another type, String implement the trait
+                of into with many different type, therefore we need to convert String to the trait with the 
+                right type,here we want string convert itself to Vec<u8>, then we need to convert String
+                to type Into<Vec<u8>>.
+                */
+                if <String as Into<Vec<u8>>>::into(address.clone()) == tx.recipient_address {
+                    total_amount += value as i64;
+                }
+
+                if <String as Into<Vec<u8>>>::into(address.clone()) == tx.sender_address {
+                    total_amount -= value as i64;
+                }
+            }
+        }
+
+        total_amount
+    }
+
+
+}
+
 impl Block {
     ....
  pub fn print(&self) {
@@ -319,8 +351,22 @@ fn main() {
     block_chain.add_transaction(&Transaction::new("X".into(), "Y".into(), 1));
     block_chain.mining();
     block_chain.print();
+
+    println!(
+        "value for miner: {}",
+        block_chain.calculate_total_amount(my_blockchain_addr.to_string())
+    );
+    println!(
+        "value for C: {}",
+        block_chain.calculate_total_amount("C".to_string())
+    );
+    println!(
+        "value for D: {}",
+        block_chain.calculate_total_amount("D".to_string())
+    );
 }
 ```
+
 Run aboved code we get the following result:
 ```rs
 computing time: 98.313489ms,proof hash for current block is: "0002d7af8f0106a9b8d3382e3a9a19438ee02ed88be38eff81a896cf7359fa52"
@@ -415,6 +461,9 @@ receipent address: Ok("my blockchain address")
 value:1
  ----------------------------------------
 *************************
+value for miner: 3
+value for C: -2
+value for D: 2
 ```
 As you can see we print out more detail info, especially we print out sender and receiver for a transaction, when we complete mining a block, a transaction is created,
 with sender as the blockchain and receiver is the miner.
